# pph21_addons

./: README.md  pyproject.toml
pph21_addons/: hooks.py  modules.txt
pph21_addons/config/: desktop.py  docs.py
pph21_addons/doctype_function/: pph21_core.py
pph21_addons/fixtures/: pph21_ter_master.json
pph21_addons/pph21_ter_addons/custom/: employee.json  salary_slip.json
pph21_addons/pph21_ter_addons/doctype/detail_golongan_ter/: detail_golongan_ter.json  detail_golongan_ter.py
pph21_addons/pph21_ter_addons/doctype/detail_ter/: detail_ter.json  detail_ter.py
pph21_addons/pph21_ter_addons/doctype/pph21_ter_master/: pph21_ter_master.js  pph21_ter_master.json  pph21_ter_master.py  test_pph21_ter_master.py
